--- a/cssestilos/estilos.css
+++ b/cssestilos/estilos.css
@@ -16,6 +16,20 @@ body{
 
 }
 
+#cabecera{
+    background: blue;
+    color: white;
+    font-weight: bold;
+    box-shadow: 0px 5px 30px 0px black;
+    margin: 0;
+    padding: 0.5em;
+
+}
+
+#post{
+    padding: 1em;
+}
+
 #container h1 {
     font-size: 90px;
 }
