--- a/cssestilos/estilos.css
+++ b/cssestilos/estilos.css
@@ -1,7 +1,7 @@
 body{
     color: red;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 16px;
     margin: 0;
     padding: 0;
